# boilerplates

./: AUDIT.md  ENTERPRISE_PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
src/: index.ts  prompts.ts  scaffold.ts  templates.ts
templates/base/django/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
templates/base/django/apps/core/: urls.py  views.py
templates/base/django/config/: settings.py
templates/base/elysiajs/: README.md  package.json  tsconfig.json
templates/base/express/: README.md  package.json
templates/base/fastapi/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
templates/base/fastapi/src/: app.py  server.py
templates/base/fastapi/src/config/: settings.py
templates/base/fastapi/src/routes/: __init__.py  health.py
templates/base/flask/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
templates/base/flask/src/: app.py  server.py
templates/base/flask/src/config/: settings.py
templates/base/flask/src/lib/: logger.py
templates/base/flask/src/routes/: __init__.py  health.py
templates/base/flutter/: README.md  pubspec.yaml
templates/base/nextjs/: .gitignore  README.md  package.json  tsconfig.json
templates/base/react/: README.md  index.html  package.json  tsconfig.json
templates/base/react-native/: .gitignore  README.md  app.json  package.json
templates/base/vinext/: .gitignore  README.md  package.json  tsconfig.json
templates/base/vue/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json
(+90 files in other folders)
